syntax = "proto3";

package metrics;

service MetricsService {
  rpc GetTotalLikes (GetLikesRequest) returns (GetLikesResponse);
  rpc AddLike (LikeRequest) returns (BoolResponse);
  rpc RemoveLike (LikeRequest) returns (BoolResponse);
}

message GetLikesRequest {
  string publicationId = 1;
}

message GetLikesResponse {
  int32 total = 1;
}

message LikeRequest {
  string publicationId = 1;
  string userId = 2;
}

message BoolResponse {
  bool success = 1;
}

message TopPost {
  string publicationId = 1;
  int32 score = 2;
}

